--- a/app/components/Helpers/Header/Header.scss
+++ b/app/components/Helpers/Header/Header.scss
@@ -3,7 +3,7 @@
 	height: 60px;
 	width: 100%;	
 	box-sizing: border-box;
-	display: flex;
+	display: block;
 	flex-wrap: nowrap;
 	background-repeat: no-repeat;
 	font-family: Arial, Helvetica, sans-serif;
@@ -13,7 +13,9 @@
 	background-size: auto 30px;
 	background-position: center center !important;
 	.Header-search{
-		
+		float: right;
+		display: block;
+		margin-right: auto;
 		.Header-searchInput{
 			position: absolute;
 			padding: 0;
@@ -41,10 +43,22 @@
 		margin:0 0.25em;
 		height: 60px;
 		&:hover {
-			color: $headerHighlight;
+			color: #00a2e0;
 			transition: all 0.4s ease-in-out;
 		}
 	}
+}
+
+.Header-expandableSearch {
+	position: relative;
+	display: inline-block;
+	height: 60px;
+	width: 24px;
+	cursor: pointer;
+	margin-right: 2.25em;
+	vertical-align: top;
+	color: #00a2e0;
+
 }
 
 input[type=search] {
@@ -62,26 +76,26 @@ input[type=search] {
 
 
 .Header-searchInput:focus {
-	width: 200px;
+	width: 200px !important;
     right: 60px;
-    color: $headerTxt;
+    color: #00a2e0 !important;
     cursor: auto;
     border-bottom: 1px solid;
-    border-color: $headerHighlight;
+    border-color: #00a2e0;
     &::-webkit-input-placeholder {
-    	color: $headerTxtInactive
+    	color: #00a2e0 !important;
     }
 
 }
 
 
 .Header-searchInput:hover + i.Header-searchIcon {
-	color: blue;
+	color: #00a2e0;
 	transition: color 0.4s ease-in-out;
 }
 
 .Header-searchInput.is-filled + i.Header-searchIcon {
-	color: blue;
+	color: #00a2e0;
 	transition: all 0.4s ease-in-out;
 }
 
