--- a/app/components/Home/Home.scss
+++ b/app/components/Home/Home.scss
@@ -1,3 +1,179 @@
-.homePage{
-	color: red;
+.Main-Section{
+	margin: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	background-color: #f7f7f7;
+	padding: 0;
+	min-height: calc(100vh - 60px);
+	position: absolute;
+	top:60px;
+	left:0;
+	right:0;
+	box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+	max-width: 100vw;
+	-webkit-overflow-scrolling: touch;
+	.Section{
+		max-width: 1200px;
+		background-color: #F7F7F7;
+		margin: 0 auto;
+		display: -ms-flexbox;
+		display: flex;
+		-ms-flex-wrap: wrap;
+		flex-wrap: wrap;
+		-ms-flex-direction: column;
+		flex-direction: column;
+		list-style-type: none;
+		-ms-flex-pack: center;
+		justify-content: center;
+		padding: 0;
+		z-index: 0;
+		.Section-group{
+			margin-top: 2em;
+			h2.Group-Title{
+				font-family: 'ProximaNova-Regular';
+				word-spacing: 2px;
+				color: rgba(0, 0, 0, 0.54);
+				margin-bottom: 10px;
+				margin-top: 15px;
+				margin: 0 auto;
+				padding-left: 0px;
+				max-width: 1150px;
+				padding-bottom: 5px;
+				border-bottom: 2px solid #24abe1;
+			}
+			ul{
+				max-width: 1150px;
+				margin: 0 auto;
+				padding: 0;
+				display: -ms-flexbox;
+				display: flex;
+				-ms-flex-pack: left;
+				justify-content: left;
+				-ms-flex-wrap: wrap;
+				flex-wrap: wrap;
+				list-style-type: none;
+				li.Section-issue{
+					display: -ms-flexbox;
+					display: flex;
+					-ms-flex-direction: column;
+					flex-direction: column;
+					box-sizing: border-box;
+					margin: 15px;
+					/* margin-right: 1em; */
+					box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+					transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+					border-bottom-left-radius: 2px;
+					border-bottom-right-radius: 2px;
+					min-width: 200px;
+					width: 200px;
+					max-width: 20%;
+					&:hover{
+						box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+						
+					}
+					.Issue-cover{
+						display: block;
+						height: auto;
+						position: relative;
+						overflow: hidden;
+						color: #fff;
+						img{
+							max-width: 100%;
+							width: 100%;
+							height: 270px;
+							min-height: 200px;
+							vertical-align: top;
+						}
+						.Issue-cover-info{
+							max-width: 100%;
+							width: 100%;
+							height: 270px;
+							min-height: 200px;
+							vertical-align: top;
+							
+						}
+					}
+					.Issue-detail{
+						display: -ms-flexbox;
+						display: flex;
+						-ms-flex-direction: column;
+						flex-direction: column;
+						-ms-flex-align: center;
+						align-items: center;
+						box-sizing: border-box;
+						height: 72px;
+						border-top: 1px solid;
+						border-color: rgba(0,0,0,.26);
+						display: flex;
+						min-height: 45px;
+						-ms-flex-positive: 3;
+						flex-grow: 3;
+						-ms-flex-wrap: wrap;
+						flex-wrap: wrap;
+						-ms-flex-pack: center;
+						justify-content: center;
+						padding: 0.45em 0.75em;
+						background-color: #ffffff;
+						border-bottom-left-radius: 2px;
+						border-bottom-right-radius: 2px;
+						overflow: hidden;
+						position: relative;
+					}
+				}
+			}
+		}
+	}
+	ul{
+		li{
+
+		}
+	}
+}
+
+.Issue-cover-overlay{
+	text-align: center;
+    background-color: transparent;
+    position: absolute;
+    display: -ms-flexbox !important;
+    display: flex !important;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.Section-issue:hover .Issue-cover-overlay {
+    background-color: rgba(0,0,0,.75);
+    transition: background-color 0.25s ease-in-out;
+}
+
+.Overlay-icons{
+	opacity: 0;
+}
+.Section-issue:hover .Overlay-icons {
+    visibility: visible;
+    transition: visibility 0.50s ease-in-out;
+    transition-delay: 0.15s;
+	cursor: pointer;
+	opacity: 1;
+}
+.Issue-info li:first-child {
+    color: #03A9F4;
+    width: 100%;
+    font-family: 'ProximaNova-Regular';
+    letter-spacing: .3px;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-align: center;
+    align-items: center;
+}
+						
+						
+.Issue-info li {
+    height: 36px;
+    text-align: left;
+    color: rgba(0, 0, 0, 0.26);
+    text-overflow: ellipsis;
 }
