--- a/app/components/Home/Home.scss
+++ b/app/components/Home/Home.scss
@@ -24,30 +24,51 @@
 		list-style-type: none;
 		-ms-flex-pack: center;
 		justify-content: center;
-		padding: 0;
+		padding: 10px 40px;
 		z-index: 0;
 		.Section-group{
 			margin-top: 2em;
-			h2.Group-Title{
-				font-family: 'ProximaNova-Regular';
-				word-spacing: 2px;
-				color: rgba(0, 0, 0, 0.54);
-				margin-bottom: 10px;
-				margin-top: 15px;
-				margin: 0 auto;
-				padding-left: 0px;
-				max-width: 1150px;
-				padding-bottom: 5px;
-				border-bottom: 2px solid #24abe1;
+			.Group-header{
+				width: 100%;
+				display: block;
+				position: relative;
+				margin-bottom: 100px;
+				h2.Group-Title{
+					position: absolute;
+					z-index: 10;
+					font-family: 'ProximaNova-Regular';
+					word-spacing: 2px;
+					color: rgba(0, 0, 0, 0.54);
+					margin-bottom: 10px;
+					margin-top: 15px;
+					margin: 0 auto;
+					padding-left: 0px;
+					padding-bottom: 5px;
+					border-bottom: 2px solid #24abe1;
+					width: 100%;
+				}
+				span{
+					position: absolute;
+					z-index: 100;
+					right: 0px;
+					background-color: #00a6e2 !important;
+					color: #fff;
+					padding: 3px 10px;
+					top: -15px;
+					line-height: 30px;
+					i{
+						position: relative;
+						top: 6px;
+						left: -2px;
+					}
+				}
 			}
+			
 			ul{
 				max-width: 1150px;
 				margin: 0 auto;
 				padding: 0;
-				display: -ms-flexbox;
-				display: flex;
-				-ms-flex-pack: left;
-				justify-content: left;
+				display: block;
 				-ms-flex-wrap: wrap;
 				flex-wrap: wrap;
 				list-style-type: none;
@@ -76,10 +97,13 @@
 						position: relative;
 						overflow: hidden;
 						color: #fff;
+						text-align: center;
+						background-color: #fff;
 						img{
 							max-width: 100%;
-							width: 100%;
-							height: 270px;
+							width: 80%;
+							/* height: 270px; */
+							padding: 10px 0px;
 							min-height: 200px;
 							vertical-align: top;
 						}
@@ -89,6 +113,7 @@
 							height: 270px;
 							min-height: 200px;
 							vertical-align: top;
+							
 							
 						}
 					}
@@ -151,6 +176,9 @@
 
 .Overlay-icons{
 	opacity: 0;
+	i{
+		color: red;
+	}
 }
 .Section-issue:hover .Overlay-icons {
     visibility: visible;
@@ -168,12 +196,16 @@
     display: flex;
     -ms-flex-align: center;
     align-items: center;
+    text-align: center;
+    margin-top: 10px;
+    font-size: 22px;
 }
 						
 						
 .Issue-info li {
     height: 36px;
-    text-align: left;
-    color: rgba(0, 0, 0, 0.26);
+    text-align: center;
+    color: #FF5722;
     text-overflow: ellipsis;
+	cursor: pointer;
 }
